# Nerdbank.Streams

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  EnlistmentInfo.props  EnlistmentInfo.targets  Nerdbank.Streams.sln  Nerdbank.Streams.slnx  Packages.props  README.md  SECURITY.md  appveyor.yml  azure-pipelines.yml  init.ps1  nuget.config  run_test_until_failure.sh  version.json
.config/: dotnet-tools.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  renovate.json
azure-pipelines/: build.yml  collect-artifacts.yml  collect-deployables.yml  dotnet.yml  install-dependencies.yml  node.yml  publish-afterjob.yml  publish-deployables.yml  release.yml  signfiles.txt  testfx.yml
doc/: AsStream.md  DuplexPipe.md  FullDuplexStream.md  HalfDuplexStream.md  MonitoringStream.md  MultiplexingStream.md  PipeStream.md  PrefixingBufferWriter.md  ReadBlockAsync.md  ReadSlice.md  Sequence.md  SequenceTextReader.md  SimplexStream.md  StreamAsPipe.md  Substream.md  UsePipe.md  WebSocketStream.md
docfx/: docfx.json  index.md  toc.yml
ext/: .editorconfig
src/: .editorconfig  AssemblyInfo.cs  Directory.Build.props  Nerdbank.FullDuplexStream.sln  Nerdbank.Streams.sln  (+7 more)
src/nerdbank-stream.rs/: CONTRIBUTING.md  Cargo.toml
src/nerdbank-stream.rs/src/: lib.rs
src/nerdbank-stream.rs/src/multiplexing_stream/: channel_source.rs  codec_v3.rs  control_code.rs  error.rs  formatter.rs  frame.rs  frame_duplex.rs  message_codec.rs  mod.rs  options.rs
(+324 files in other folders)
